# recon-craft-studio

./: .env.example  API_INTEGRATION_SUMMARY.md  BACKEND_SUMMARY.md  FRONTEND_API_INTEGRATION.md  PROJECT_README.md  QUICK_START.md  README.md  index.html  package-lock.json  package.json
backend/: .env.example  .gitignore  API_EXAMPLES.md  DEPLOYMENT.md  DEV_SETUP.md  Makefile  QUICK_REFERENCE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  worker.py
backend/.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/routes/: auth.py  health.py  integrations.py  runs.py  targets.py  workflows.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: auth.py  integration.py  run.py  target.py  workflow.py
backend/app/services/: auth_service.py  run_service.py
backend/app/workers/: run_executor.py  tool_runner.py
backend/docker/: Dockerfile.api  Dockerfile.worker
backend/scripts/: init-db.py  quick-start.sh
backend/tests/: conftest.py  test_health.py
src/: App.tsx  index.css
src/api/: client.ts  reconCraftApi.ts
src/components/layout/: Header.tsx  ThemeToggle.tsx
src/components/workflow/: NodeInspector.tsx  NodePalette.tsx  RunConsole.tsx
src/lib/: mockData.ts  nodeDefinitions.ts
src/pages/: Builder.tsx  Dashboard.tsx  Reports.tsx  Runs.tsx  Settings.tsx  Targets.tsx
src/store/: index.ts
src/store/slices/: runsSlice.ts  settingsSlice.ts  targetsSlice.ts  workflowsSlice.ts
src/types/: workflow.ts
